@@ -7,10 +7,9 @@
  */
 package zollerngalaxy.mobs.entities;
 
-import javax.annotation.Nullable;
 import micdoodle8.mods.galacticraft.core.entities.EntityAlienVillager;
+import net.minecraft.entity.Entity;
 import net.minecraft.entity.SharedMonsterAttributes;
-import net.minecraft.entity.ai.EntityAILookIdle;
 import net.minecraft.entity.ai.EntityAIWatchClosest;
 import net.minecraft.entity.monster.IMob;
 import net.minecraft.entity.player.EntityPlayer;
@@ -27,20 +26,20 @@ public class EntityWasp extends EntityBugZG implements IMob {
 	
 	public EntityWasp(World worldIn) {
 		super(worldIn);
-		this.setSize(this.width * 0.6F, this.height * 0.6F);
-		this.tasks.addTask(0, new EntityAIWatchClosest(this, EntityPlayer.class, 32.0F));
-		this.tasks.addTask(1, new EntityAILookIdle(this));
+		this.setSize(this.width * 0.7F, this.height * 0.7F);
+		this.tasks.addTask(0, new EntityAIWatchClosest(this, EntityPlayer.class, 16.0F));
+		this.tasks.addTask(1, new EntityAIWatchClosest(this, EntityAlienVillager.class, 16.0F));
+		this.tasks.addTask(2, new EntityAIWatchClosest(this, EntityZGVillagerBase.class, 16.0F));
 		this.targetTasks.addTask(1, new EntityAIBugNearestAttackableTarget(this, EntityPlayer.class, true));
-		this.targetTasks.addTask(1, new EntityAIBugNearestAttackableTarget(this, EntityAlienVillager.class, true));
-		this.targetTasks.addTask(1, new EntityAIBugNearestAttackableTarget(this, EntityZGVillagerBase.class, true));
+		this.targetTasks.addTask(2, new EntityAIBugNearestAttackableTarget(this, EntityAlienVillager.class, true));
+		this.targetTasks.addTask(3, new EntityAIBugNearestAttackableTarget(this, EntityZGVillagerBase.class, true));
 	}
 	
 	@Override
 	protected void applyEntityAttributes() {
 		super.applyEntityAttributes();
-		this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(0.2631D);
+		this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(0.3231D);
 		this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(45.0D);
-		this.getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).setBaseValue(8.0D);
 	}
 	
 	@Override
@@ -49,9 +48,8 @@ public class EntityWasp extends EntityBugZG implements IMob {
 	}
 	
 	@Override
-	@Nullable
 	public SoundEvent getAmbientSound() {
-		return this.getIsBatHanging() && this.rand.nextInt(4) != 0 ? null : ZGSoundEvents.ENTITY_WASP_SAY;
+		return ZGSoundEvents.ENTITY_WASP_SAY;
 	}
 	
 	@Override
@@ -65,10 +63,21 @@ public class EntityWasp extends EntityBugZG implements IMob {
 	}
 	
 	@Override
+	public boolean attackEntityAsMob(Entity entityIn) {
+		return entityIn.attackEntityFrom(ZGDamageSrc.deathWasp, ZGDamageSrc.deathWasp.getDamageBase());
+	}
+	
+	@Override
 	public void onCollideWithPlayer(EntityPlayer playerIn) {
 		if (!this.getEntityWorld().isRemote) {
 			playerIn.attackEntityFrom(ZGDamageSrc.deathWasp, ZGDamageSrc.deathWasp.getDamageBase());
 		}
 	}
 	
+	@Override
+	protected void collideWithEntity(Entity entityIn) {
+		if (!this.getEntityWorld().isRemote) {
+			entityIn.attackEntityFrom(ZGDamageSrc.deathWasp, ZGDamageSrc.deathWasp.getDamageBase());
+		}
+	}
 }
