@@ -1,0 +1,75 @@
+/**
+ * Zollern Galaxy by @author Zollern Wolf
+ * Copyright 2016 - 2025
+ * You may use this code to learn from,
+ * but do not claim it as your own, and
+ * do not redistribute it.
+ */
+package zollerngalaxy.mobs.entities.ai;
+
+import java.util.Iterator;
+import javax.annotation.Nullable;
+import net.minecraft.block.Block;
+import net.minecraft.block.BlockLeaves;
+import net.minecraft.init.Blocks;
+import net.minecraft.util.EnumFacing;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
+import net.minecraft.util.math.Vec3d;
+import zollerngalaxy.blocks.ZGBlockLog;
+import zollerngalaxy.mobs.entities.base.EntityBugZG;
+import zollerngalaxy.util.RandPosGenBug;
+
+public class EntityAIBugWanderAvoidWaterFlying extends EntityAIBugAvoidWater {
+	
+	public EntityAIBugWanderAvoidWaterFlying(EntityBugZG p_i47413_1_, double p_i47413_2_) {
+		super(p_i47413_1_, p_i47413_2_);
+	}
+	
+	@Override
+	@Nullable
+	protected Vec3d getPosition() {
+		Vec3d vec3d = null;
+		
+		if (this.entity.isInWater() || this.entity.isOverWater()) {
+			vec3d = RandPosGenBug.getLandPos(this.entity, 15, 15);
+		}
+		
+		if (this.entity.getRNG().nextFloat() >= this.probability) {
+			vec3d = this.getTreePos();
+		}
+		
+		return vec3d == null ? super.getPosition() : vec3d;
+	}
+	
+	@Nullable
+	private Vec3d getTreePos() {
+		BlockPos blockpos = new BlockPos(this.entity);
+		BlockPos.MutableBlockPos blockpos$mutableblockpos = new BlockPos.MutableBlockPos();
+		BlockPos.MutableBlockPos blockpos$mutableblockpos1 = new BlockPos.MutableBlockPos();
+		Iterable<BlockPos.MutableBlockPos> iterable = BlockPos.MutableBlockPos.getAllInBoxMutable(MathHelper.floor(this.entity.posX - 3.0D),
+				MathHelper.floor(this.entity.posY - 6.0D), MathHelper.floor(this.entity.posZ - 3.0D), MathHelper.floor(this.entity.posX + 3.0D),
+				MathHelper.floor(this.entity.posY + 6.0D), MathHelper.floor(this.entity.posZ + 3.0D));
+		Iterator iterator = iterable.iterator();
+		BlockPos blockpos1;
+		
+		while (true) {
+			if (!iterator.hasNext()) {
+				return null;
+			}
+			
+			blockpos1 = (BlockPos) iterator.next();
+			
+			if (!blockpos.equals(blockpos1)) {
+				Block block = this.entity.world.getBlockState(blockpos$mutableblockpos1.setPos(blockpos1).move(EnumFacing.DOWN)).getBlock();
+				boolean flag = block instanceof BlockLeaves || block == Blocks.LOG || block == Blocks.LOG2 || block instanceof ZGBlockLog;
+				
+				if (flag && this.entity.world.isAirBlock(blockpos1) && this.entity.world.isAirBlock(blockpos$mutableblockpos.setPos(blockpos1).move(EnumFacing.UP))) {
+					break;
+				}
+			}
+		}
+		
+		return new Vec3d(blockpos1.getX(), blockpos1.getY(), blockpos1.getZ());
+	}
+}
