@@ -27,7 +27,6 @@ public class EntityAIXenomorphAttack extends EntityAIAttackMelee {
 		
 		if (p_190102_2_ <= d0 && this.attackTick <= 0) {
 			this.attackTick = 20;
-			// this.attacker.swingArm(EnumHand.MAIN_HAND);
 			this.attacker.attackEntityAsMob(p_190102_1_);
 		}
 	}
